add `data-bonsai-google-font` attribute description

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -87,6 +87,7 @@ Add the Bonsai Checkout dependencies to `Checkout page`:
 | `data-bonsai-partner-id`     | `YOUR_API_KEY`                                                                       | Authenticates your account with Bonsai services | ✅       |
 | `data-bonsai-btn-background` | `#000000`                                                                            | A color for the button fill                     | ❌       |
 | `data-bonsai-btn-text`       | `#ffffff`                                                                            | A color for the button font color               | ❌       |
+| `data-bonsai-google-font`    | `Jost`                                                                               | A custom google font override                   | ❌       |
 
 ### Step 3: Create cart
 
