--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -88,8 +88,9 @@ Add the Bonsai Checkout dependencies to `Checkout page`:
 
   // Initialize bonsai with configuration options
   bonsai.init({
-    accountId: 'ckhm921rg000101mfhkwi0379',
+    accountId: '<API_KEY_VALUE>',
     onSuccess: (order) => console.log({ order }),
+    onShippingSubmit: (shipping) => console.log({ shipping }),
     cartInfoMessage: 'Custom message displayed on the cart page',
     orderSuccessMessage: 'Custom message displayed on the order success page',
   });
@@ -109,6 +110,8 @@ type Config = {
 
   /* A callback that will be invoked on checkout success */
   onSuccess?: (order: Order) => void;
+  /* A callback that will be invoked when user submits shipping information */
+  onShippingSubmit?: (shipping: Shipping) => void;
   /* A color for the button fill */
   buttonBackground?: string;
   /* A color for the button font color */
