Restore accidentally removed example

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -102,6 +102,7 @@ Add the Bonsai Checkout dependencies to `Checkout page`:
   // Initialize bonsai with configuration options
   bonsai.init({
     accountId: '<API_KEY_VALUE>',
+    customInfoMessage: 'Custom message displayed on the cart page',
     bonsaiEvents: {
       version: 'v1',
       onBonsaiEvent: ({ tag, event }) => {
