--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -390,6 +390,6 @@ Coming soon...
 ## Changelog
 
 - October 26, 2023
-  - Additional fields added all `BonsaiEvent` types.
+  - Additional fields added to all `BonsaiEvent` types.
   - `onShippingSubmit` and `onSuccess` callbacks are deprecated.
   - `bonsaiEvents` supports the same functionality, and should be used instead.
