Add province to shipping_info_entered Bonsai UI event

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -306,6 +306,7 @@ type Address = {
   address1: string;
   address2?: string;
   city: string;
+  province: string;
   country: string;
   firstName: string;
   lastName: string;
@@ -395,6 +396,8 @@ Coming soon...
 
 ## Changelog
 
+- November 2, 2023
+  - 
 - October 26, 2023
   - Additional fields added to all `BonsaiEvent` types.
   - `onShippingSubmit` and `onSuccess` callbacks are deprecated.
