--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -397,7 +397,7 @@ Coming soon...
 ## Changelog
 
 - November 2, 2023
-  - 
+  - Added `province` to `shipping_info_entered` `BonsaiEvent`. 
 - October 26, 2023
   - Additional fields added to all `BonsaiEvent` types.
   - `onShippingSubmit` and `onSuccess` callbacks are deprecated.
