--- a/docs/bonsai-ui/introduction.mdx
+++ b/docs/bonsai-ui/introduction.mdx
@@ -6,10 +6,7 @@ sidebar_position: 1
 
 `Bonsai UI` is a suite of Javascript tools enabling product checkout using the Bonsai platform.
 
-Currently, we support the following integrations:
-
-- [Bonsai Checkout](/docs/bonsai-ui/checkout) <span className="label-success">NEW</span>
+### [Bonsai Checkout features](/docs/bonsai-ui/checkout)
+  - Single-product checkout
   - Multi-product checkout
   - Apple Pay and Google Pay
-- [Express Checkout](/docs/bonsai-ui/express-checkout) <span className="label-warning">End of Life: Q3 2023</span>
-  - Single product checkout
