--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -187,7 +187,7 @@ type Config = {
      * to the events without breaking your integration. */
     version: 'v1';
     /* A callback that will be invoked when a Bonsai event has been emitted. */
-    onBonsaiEvent: (event: BonsaiEvent) => void; // More details in "Bonsai Events" section below
+    onBonsaiEvent: (event: BonsaiEvent) => void; // More details in "Events" page
   };
 
   /* A color for the button fill */
@@ -287,6 +287,9 @@ Coming soon...
 
 ## Changelog
 
+- November 21, 2023
+  - Addition of ApplePay/GooglePay events
+  - Events extracted to separate page
 - November 14, 2023
   - Additional `BonsaiEvent` types
 - November 6, 2023
