fix: overlooked outdated event name

--- a/docs/bonsai-ui/checkout/events.mdx
+++ b/docs/bonsai-ui/checkout/events.mdx
@@ -46,7 +46,7 @@ _Please note that additional fields are not considered breaking changes, and wil
 | `insufficient_inventory`       | One or more products have insufficient inventory                                                         |
 | `other_error`                  | An error has occured during the checkout process                                                         |
 | `express_checkout_mounted`     | Express Checkout button has been rendered                                                                |
-| `express_checkout_begin`       | User has clicked on the Express Checkout button                                                          |
+| `express_checkout_started`     | User has clicked on the Express Checkout button                                                          |
 
 ## Usage
 
@@ -108,7 +108,7 @@ type BonsaiEvent =
       tag: 'express_checkout_mounted'; 
       data: { paymentMethod: 'googlePay' | 'applePay' }
     }
-  | { tag: 'express_checkout_begin'; 
+  | { tag: 'express_checkout_started';
       data: { paymentMethod: 'googlePay' | 'applePay' }
     };
 
