--- a/docs/api/carts/carts-api.info.mdx
+++ b/docs/api/carts/carts-api.info.mdx
@@ -8,21 +8,21 @@ custom_edit_url: null
 ---
 
 import ApiLogo from "@theme/ApiLogo";
-import Tabs from "@theme/Tabs";
+import SchemaTabs from "@theme/SchemaTabs";
 import TabItem from "@theme/TabItem";
-import Export from "@theme/ApiDemoPanel/Export";
+import Export from "@theme/ApiExplorer/Export";
 
-<span className={"theme-doc-version-badge badge badge--secondary"}>Version: 0.8.30</span>
+<span className={"theme-doc-version-badge badge badge--secondary"}>Version: 0.10.1</span>
 
 <Export url={"https://raw.githubusercontent.com/ShopBonsai/docs/main/spec/carts.json"} proxy={undefined}></Export>
 
-# Carts API
+<h1 className={"openapi__heading"}>Carts API</h1>
 
 
 
 API for creating, reading, updating, and deleting carts.
 
-<div style={{"marginBottom":"2rem"}}><h2 id={"authentication"} style={{"marginBottom":"1rem"}}>Authentication</h2><Tabs><TabItem label={"API Key"} value={"APIKeyHeader"}><div><table><tbody><tr><th>Security Scheme Type:</th><td>apiKey</td></tr><tr><th>Header parameter name:</th><td>API-Key</td></tr></tbody></table></div></TabItem></Tabs></div><div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
+<div style={{"marginBottom":"2rem"}}><h2 id={"authentication"} style={{"marginBottom":"1rem"}}>Authentication</h2><SchemaTabs className={"openapi-tabs__security-schemes"}><TabItem label={"API Key: APIKeyHeader"} value={"APIKeyHeader"}><div><table><tbody><tr><th>Security Scheme Type:</th><td>apiKey</td></tr><tr><th>Header parameter name:</th><td>API-Key</td></tr></tbody></table></div></TabItem></SchemaTabs></div><div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
 
 ```mdx-code-block
 import DocCardList from '@theme/DocCardList';
